--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"token": "ТОКЕН", "chat_id": 1234567890, "botname": "ИМЯ БОТА", "random_percent": 10}
+{"token": "ТОКЕН", "chat_id": 1234567890, "botname": "ИМЯ БОТА БЕЗ @", "random_percent": 10}
